src/pages/home/home.css
/* ... */
.accredation .img img{
  width: 100px;
  height: 100px;
  margin-left:50px;
  filter: drop-shadow(0px 2px 7px #464545);

}
/* ------------------------------------------------------------------------------------------------------------------------------------------------------- */

.collab{
margin-left: 60px;
margin-bottom: 30px;
}
.collab h1 {
  margin-bottom: 40px;
  font-size: 36px;
  font-weight: bold;
  line-height: 43px;
}

.collab .col img {
  height: 130px;
  width: 260px;
  object-fit: contain;
}

.collab .col {
  text-align: center;
}



/* ----------------------------------------------whyus ------------------------------------------------------*/
.whyus{
  display: flex;
  flex-direction: row;
  gap:100px;
}
.whyusleft img{
  margin-top: -265px;
  margin-left: 61px;
}

.whyusright h1{
  margin-bottom: 40px;
  font-size: 36px;
  font-weight: bold;
  line-height: 43px;
}
.whyusright{
  width:460px;
}
.whyusright div{
  font-size: 20px;
  line-height: 35px;
}

.whyusright button{
 padding:5px 14px;
  border: 2px solid var(--primary);
  background-color: var(--primary);
  color: var(--secondary);
  margin-top: 50px;
  width:200px;
  height:50px;
  font-size: 17px;
  cursor: pointer;
  transition: .4s;
  align-items: center;
  border-radius: 10px;
}

.whyusright button:hover{
  background-color: var(--secondary);
  color:var(--primary);
  border-color: var(--primary);
}
/* ---------------------------------------------------------------------------------------------------------------------------------------------------- */

/* ----------------------------------------------testimonials----------------------------------------------------------- */
.testimonialsection{
  margin-left: 60px;
}
.testimonial_content{
  display: flex;
  flex-direction: row;
  gap:57px
}
.testimonialsection h1{
 margin-bottom: 8px;
  font-size: 36px;
  font-weight: bold;
  line-height: 43px;
}

.testimonialsection .say{
  margin-left:9px;
  width: 161px;
  height: 39px;
  font-size: 18px;
  margin-bottom: 40px;
  color:var(--textcolor);
  line-height: 25px;
  
 letter-spacing: 0.5px;
}
.testimage{
  width:72px;
  height:350px;
  position: relative;
}
.testimage img{
  width: 70px;
  height:70px;
  margin-bottom:-25px ;
 
}
.left-arrow{
 width:65px;
 height:65px;
 border:2px solid var(--textcolor);
 position: absolute;
 transform: translate(-50%, -50%) rotate(45deg);
 border-right: none;
 border-top: none;
 margin-left:170px;
 margin-top:50px;
}
.left-arrow:before{
  position:absolute;
  content:"";
  border-top: 2px solid var(--textcolor);
  width:calc(1.41*(64px + 2px));
  transform:rotate(45deg);
 left: -15px;
 top:32px
  
}
.testimage div{
  position: absolute;
  margin-top:78px
}
.testsection{
  width:570px;
  border:2px solid var(--textcolor);
  border-radius: 5px;
  margin-left: 50px;
}
.test_content{
  margin:15px 53px;

}
.test_content h2{
font-size: 20px;
width: 340px;
height: 39px;
color:var(--tertiary);
margin-bottom: 20px;
}
.test_content .text{
  margin-bottom: 20px;
  font-size: 16px;
  letter-spacing: 1px;
  line-height: 22px;
  width:400px;
  
}
.test_content .name{
  width: 121px;
  height: 38px;
  font-size: 18px;
  color:var(--textcolor);
  
}



.splide__pagination , .splide__arrow--prev , .splide__arrow--next , .splide__arrow svg{
  visibility: hidden;
}




/* ---------------------------------------------------------------------------------------------------------------------------------- */
/*  ------------------------------------------------------------Sowersection---------------------------------------------------------------------------------------- */


.sowersection{
  display: flex;
  flex-direction: row;
  gap:120px;
  margin-left: 60px;
  margin-top: -20px;
}

.sowerleft h1{
  margin-bottom: 40px;
  font-size: 36px;
  font-weight: bold;
  line-height: 43px;
}


.sowerleft{
  width:550px;
  margin:auto 0px;
}
.sowerleft div{
  font-size: 20px;
  line-height: 35px;
}

.btnsec{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.btnsec div{
  margin-top: 65px ;
  color:var(--primary)
}
.sowerleft .btnsec button{
 padding:5px 14px;
  border: 2px solid var(--primary);
  background-color: var(--primary);
  color: var(--secondary);
  margin-top: 50px;
  width:200px;
  height:50px;
  font-size: 17px;
  cursor: pointer;
  transition: .4s;
  align-items: center;
  border-radius: 10px;
}

.sowerleft .btnsec button:hover{
  background-color: var(--secondary);
  color:var(--primary);
  border-color: var(--primary);
}

/* ---------------------------------------------------------------------------------------------------------------------- */
.slides-achievements {
  padding: 0rem 1rem;
  margin: 1rem 0;
  position: relative;
}

.slides-achievements .splide {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 3rem 1rem;
}

.slides-achievements .splide__slide {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  align-items: center;
  gap: 1rem;
}

.slides-testimonials {
  padding: 0rem 1rem;
  margin: 1rem 0;
  position: relative;
}

.slides-testimonials>h2 {
  margin: .5rem 0;
}

.slides-testimonials img {
  width: 5rem;
  border-radius: 50%;
  aspect-ratio: 1 / 1;
}

.slides-testimonials .splide {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 3rem 1rem;
}

.slides-testimonials .splide__slide {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  gap: 1rem;
}

.faq {
  display: grid;
  grid-template-columns: 1fr;
  position: relative;
}

.faq>h2 {
  margin: 1rem;

}

.faq>div {
  margin: 5px;
  display: flex;
  justify-content: center;
  width: 100%;
}

.question-section {
  background: transparent;
  border: 1px solid lightgray;
  border-radius: 8px;
  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
  cursor: pointer;
  background-color: var(--primary);
  width: 90%;

}
/* ... */

